--- a/marvelApp/package.json
+++ b/marvelApp/package.json
@@ -13,12 +13,15 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
     "axios": "^0.25.0",
     "crypto-js": "^4.1.1",
+    "import": "^0.0.6",
     "md5": "^2.3.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-eject": "^0.1.2",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-navigation-stack": "^2.10.4"
