--- a/marvelApp/ios/Podfile
+++ b/marvelApp/ios/Podfile
@@ -12,6 +12,8 @@ target 'marvelApp' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'marvelAppTests' do
     inherit! :complete
     # Pods for testing
